# liboai

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
documentation/: CMakeLists.txt  README.md
documentation/audio/: README.md
documentation/audio/examples/: CMakeLists.txt  create_speech.cpp  create_speech_async.cpp  create_transcription.cpp  create_transcription_async.cpp  create_translation.cpp  create_translation_async.cpp
documentation/authorization/: README.md  set_key.cpp
documentation/authorization/examples/: CMakeLists.txt  set_azure_key.cpp  set_azure_key_env.cpp  set_azure_key_file.cpp  set_key.cpp  set_key_env_var.cpp  set_key_file.cpp  set_organization.cpp  set_organization_env_var.cpp  set_organization_file.cpp  set_proxies.cpp  set_proxy_auth.cpp
documentation/azure/: README.md
documentation/azure/examples/: CMakeLists.txt  create_chat_completion.cpp  create_chat_completion_async.cpp  create_completion.cpp  create_completion_async.cpp  create_embedding.cpp  create_embedding_async.cpp  delete_generated_image.cpp  delete_generated_image_async.cpp  get_generated_image.cpp  get_generated_image_async.cpp  request_image_generation.cpp  request_image_generation_async.cpp
documentation/chat/: README.md
documentation/chat/conversation/: README.md
documentation/chat/conversation/examples/: CMakeLists.txt  adduserdata.cpp  getjsonobject.cpp  getrawconversation.cpp  poplastresponse.cpp  popsystemdata.cpp  popuserdata.cpp  setsystemdata.cpp  update.cpp
documentation/chat/examples/: CMakeLists.txt  create_chat_completion.cpp  create_chat_completion_async.cpp  ongoing_user_convo.cpp
documentation/completions/: README.md
documentation/completions/examples/: CMakeLists.txt  generate_completion.cpp  generate_completion_async.cpp
documentation/edits/: README.md
documentation/edits/examples/: CMakeLists.txt  create_edit.cpp  create_edit_async.cpp
documentation/embeddings/: README.md
documentation/embeddings/examples/: CMakeLists.txt  create_embedding.cpp  create_embedding_async.cpp
documentation/files/: README.md
documentation/files/examples/: CMakeLists.txt  delete_file.cpp  delete_file_async.cpp  download_uploaded_file.cpp  download_uploaded_file_async.cpp  list_files.cpp  list_files_async.cpp  retrieve_file.cpp  retrieve_file_async.cpp  upload_file.cpp  upload_file_async.cpp
documentation/fine-tunes/: README.md
documentation/fine-tunes/examples/: CMakeLists.txt  cancel_fine_tune.cpp  cancel_fine_tune_async.cpp  create_fine_tune.cpp  create_fine_tune_async.cpp  delete_fine_tune_model.cpp  delete_fine_tune_model_async.cpp  list_fine_tune_events.cpp  list_fine_tune_events_async.cpp  list_fine_tunes.cpp  list_fine_tunes_async.cpp  retrieve_fine_tune.cpp  retrieve_fine_tune_async.cpp
documentation/images/: README.md
documentation/images/examples/: CMakeLists.txt  download_generated_image.cpp  generate_edit.cpp  generate_edit_async.cpp  generate_image.cpp  generate_image_async.cpp  generate_variation.cpp  generate_variation_async.cpp
documentation/installation/: README.md
documentation/models/: README.md
documentation/models/examples/: CMakeLists.txt  list_models.cpp  list_models_async.cpp  retrieve_model.cpp  retrieve_model_async.cpp
documentation/moderations/: README.md
documentation/moderations/examples/: CMakeLists.txt  create_moderation.cpp  create_moderation_async.cpp
liboai/: CMakeLists.txt  Config.cmake.in  liboai.h
liboai/components/: audio.cpp  azure.cpp  chat.cpp  completions.cpp  edits.cpp  embeddings.cpp  files.cpp  fine_tunes.cpp  images.cpp  models.cpp  moderations.cpp
liboai/core/: authorization.cpp  netimpl.cpp  response.cpp
liboai/include/: liboai.h
liboai/include/components/: audio.h  azure.h  chat.h  completions.h  edits.h  embeddings.h  files.h  fine_tunes.h  images.h  models.h  moderations.h
liboai/include/core/: authorization.h  exception.h  netimpl.h  network.h  response.h
vs/: liboai.sln
vs/OpenAI++/: OpenAI++.vcxproj  OpenAI++.vcxproj.filters
vs/OpenAI++/OpenAI++/components/: completions.cpp  edits.cpp  fine_tunes.cpp  images.cpp  models.cpp  moderations.cpp
vs/OpenAI++/OpenAI++/core/: response.cpp
vs/OpenAI++/OpenAI++/include/components/: edits.h  moderations.h
vs/OpenAI++/OpenAI++/include/core/: authorization.h  network.h
vs/OpenAI++/components/: completions.cpp  files.cpp  fine_tunes.cpp  models.cpp  moderations.cpp
vs/OpenAI++/core/: response.cpp
vs/OpenAI++/include/components/: completions.h
vs/OpenAI++/include/core/: authorization.h  network.h  response.h
vs/liboai/: liboai.h  liboai.vcxproj  liboai.vcxproj.filters
vs/liboai/components/: chat.cpp  edits.cpp  embeddings.cpp  files.cpp  images.cpp  models.cpp
vs/liboai/core/: authorization.cpp
vs/liboai/include/components/: chat.h
vs/liboai/include/core/: exception.h  network.h
